--- a/responsive.css
+++ b/responsive.css
@@ -1,7 +1,8 @@
 @media screen and (max-width: 667px) {
     .bannerCarousel img {
+        position: relative;
         max-width: 100%;
-        height: 400px;
+        height: 600px;
     }
 
     .bannerCarouselDepartments .slideDp {
@@ -18,5 +19,20 @@
         font-size: 13px;
 
         margin: 30px 0px 0px 14px;
+    }
+
+    .subtitleCarouselDepartments::after {
+        content: '';
+        position: absolute;
+    
+        width: 50px;
+        height: 3px;
+        bottom: -149px;
+        left: 44%;
+        
+        transform: translateY(-50%);
+    
+        background-color: blue;
+        border-radius: 2px;
     }
 }
