--- a/responsive.css
+++ b/responsive.css
@@ -32,7 +32,7 @@
         
         transform: translateY(-50%);
     
-        background-color: blue;
+        background-color: #0AADFF;
         border-radius: 2px;
     }
 }
