--- a/style.css
+++ b/style.css
@@ -60,9 +60,13 @@ section .bannerCarousel {
 
 section h2 {
     position: relative;
+
     margin: 50px 0px 50px 0px;
     text-align: center;
 
+    color: #363636;
+    font-weight: 500;
+    font-size: 30px;
 }
 
 .subtitleCarouselDepartments::after {
@@ -70,13 +74,13 @@ section h2 {
     position: absolute;
 
     width: 50px;
-    height: 3px;
-    bottom: 1px;
+    height: 4px;
+    bottom: -1px;
     left: 48%;
     
     transform: translateY(-50%);
 
-    background-color: blue;
+    background-color: #0AADFF;
     border-radius: 2px;
 }
 
